--- a/package.json
+++ b/package.json
@@ -21,8 +21,13 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.16.1",
     "core-js": "^2.5.4",
+    "express": "^4.16.4",
     "hammerjs": "^2.0.8",
+    "jsonwebtoken": "^7.4.1",
+    "mongoose": "^4.13.18",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
