--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/core": "~7.2.0",
     "@angular/forms": "~7.2.0",
     "@angular/material": "^7.3.7",
+    "@angular/material-moment-adapter": "^7.3.7",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
@@ -28,6 +29,7 @@
     "express": "^4.16.4",
     "hammerjs": "^2.0.8",
     "jsonwebtoken": "^7.4.3",
+    "moment": "^2.24.0",
     "mongoose": "^4.13.18",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
